# SocialNetworkLLM

./: .gitignore  pyproject.toml
snllm/agents/: core.py  friendship.py  llm_backbone.py  memory.py  models.py
snllm/config/: config.py  network.py
snllm/conversation/: conversation.py  interest.py
snllm/environment/: environment.py
snllm/logging/: models.py
snllm/simulation/: pairing.py  runner.py  scheduler.py
snllm/tools/: return_signals.py  router.py  specs.py
snllm/utils/: embeddings.py
tests/: test_friendship.py  test_memory.py
tests/agent/: test_agent_live.py
tests/conversation/: test_conversation_online.py
tests/environment/: test_environment.py
tests/llm_backbone/: test_llm_backbone.py  test_llm_backbone_live.py
tests/simulation/: test_scheduler.py  test_simulation_runner.py  test_simulation_runner_parallel.py
